--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-page",
+  "name": "research-web-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "swiper": "^10.3.1",
