--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "jodit-react": "^1.3.39",
+    "moment": "^2.29.4",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
