--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "moment": "^2.29.4",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^10.3.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
