--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.0",
-    "compressorjs": "^1.2.1",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^10.16.4",
     "jodit-react": "^1.3.39",
     "moment": "^2.29.4",
