--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.0",
     "browser-image-compression": "^2.0.2",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "jodit-react": "^1.3.39",
     "moment": "^2.29.4",
@@ -34,9 +35,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "npm run build&&node server/index.js"
   },
   "eslintConfig": {
     "extends": [
